cambios en directorios a ignorar

--- a/dockers/.gitignore
+++ b/dockers/.gitignore
@@ -1,4 +1,5 @@
 /dockers/backend/app_old/node_modules
 /dockers/backend/app_old/.nuxt
-/dockers/backend/app/node_modules
+/dockers/backend/app/node_mosdules
 /dockers/backend/app/.nuxt
+/dockers/tmp_pages
