--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 .vscode
 /local
 /imagenes
+/aplicaciones/nodos_falsos/node_modules
+/aplicaciones/app_spa/node_modules
+/aplicaciones/app_spa/.routify
+/aplicaciones/app_spa/.codesandbox
+
