--- a/aplicaciones/backend/package.json
+++ b/aplicaciones/backend/package.json
@@ -6,7 +6,8 @@
   "author": "Claudio Omar Biale",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon -w api index"
+    "dev": "nodemon -w api index",
+    "test": "tap"
   },
   "dependencies": {
     "argon2": "^0.27.1",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.6",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "tap": "^15.0.6"
   }
 }
