--- a/aplicaciones/backend/package.json
+++ b/aplicaciones/backend/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "argon2": "^0.27.1",
     "async-mqtt": "^2.6.1",
-    "dayjs": "^1.10.4",
     "dotenv": "^8.2.0",
     "fastify": "^3.9.1",
     "fastify-autoload": "^3.4.2",
@@ -22,16 +21,12 @@
     "fastify-jwt": "^2.3.0",
     "fastify-plugin": "^3.0.0",
     "fastify-sensible": "^3.1.0",
-    "fastify-static": "^3.3.0",
     "json-rules-engine": "^6.0.1",
-    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "path": "^0.12.7",
     "pino-pretty": "^4.5.0",
     "under-pressure": "^5.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6",
-    "tap": "^15.0.6"
+    "nodemon": "^2.0.6"
   }
 }
