--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 /aplicaciones/frontend/node_modules
 /aplicaciones/backend/node_modules
 /aplicaciones/frontend/.routify
+/couchdb
+/.vagrant
+.gitignore
