--- a/servicio-mqtt.yml
+++ b/servicio-mqtt.yml
@@ -5,7 +5,7 @@ services:
     image: emqx/emqx:5.0.8
     environment:
       EMQ_NODE_NAME: "{{.Service.Name}}.{{.Task.Slot}}"
-      EMQ_NODE_COOKIE: emqx-huerta-iot
+      EMQ_NODE__COOKIE: emqx-huerta-iot
       EMQX_CLUSTER__DISCOVERY_STRATEGY: manual
     ports:
       - 1883:1883
