--- a/servicio-mqtt.yml
+++ b/servicio-mqtt.yml
@@ -4,9 +4,10 @@ services:
   emqx:
     image: emqx/emqx:5.0.8
     environment:
-      EMQ_NODE_NAME: "{{.Service.Name}}.{{.Task.Slot}}"
+      EMQ_NODE__NAME: "{{.Service.Name}}.{{.Task.Slot}}"
       EMQ_NODE__COOKIE: emqx-huerta-iot
-      EMQX_CLUSTER__DISCOVERY_STRATEGY: manual
+      EMQ_ADMIN_PASSWORD: 1978-huerta-iot
+      EMQX_CLUSTER__DISCOVERY_STRATEGY: mcast
     ports:
       - 1883:1883
       - 8081:8081
