--- a/servicio-mqtt.yml
+++ b/servicio-mqtt.yml
@@ -4,9 +4,9 @@ services:
   emqx:
     image: emqx/emqx:5.0.8
     environment:
-      EMQ_NODE__NAME: "{{.Service.Name}}.{{.Task.Slot}}"
-      EMQ_NODE__COOKIE: emqx-huerta-iot
-      EMQ_ADMIN_PASSWORD: 1978-huerta-iot
+      EMQX_NODE__NAME: "{{.Service.Name}}.{{.Task.Slot}}"
+      EMQX_NODE__COOKIE: emqx-huerta-iot
+      EMQX_ADMIN_PASSWORD: 1978-huerta-iot
       EMQX_CLUSTER__DISCOVERY_STRATEGY: mcast
     ports:
       - 1883:1883
