--- a/servicio-mqtt.yml
+++ b/servicio-mqtt.yml
@@ -8,11 +8,11 @@ services:
       EMQX_NODE__COOKIE: emqx-huerta-iot
       EMQX_DASHBOARD__DEFAULT_PASSWORD: 1978-huerta-iot
       EMQX_CLUSTER__DISCOVERY_STRATEGY: mcast
-      EMQX_CLUSTER__MCAST__ADDR: 239.192.0.1
+      EMQX_CLUSTER__MCAST__ADDR: "239.192.0.1"
       EMQX_CLUSTER__MCAST__PORTS: "4369,4370"
-      EMQX_CLUSTER__MCAST__IFACE: 0.0.0.0
+      EMQX_CLUSTER__MCAST__IFACE: "0.0.0.0"
       EMQX_CLUSTER__MCAST__TTL: 255
-      EMQX_CLUSTER__MCAST__LOOP: on      
+      EMQX_CLUSTER__MCAST__LOOP: "on"      
     ports:
       - 1883:1883
       - 8081:8081
