--- a/servicio-backend.yml
+++ b/servicio-backend.yml
@@ -2,6 +2,9 @@ version: '3.7'
 
 services:
     backend:
+      depends_on:
+      - emqx
+      - couchdb
       image: cbiale/huerta-iot:backend-1.0
       environment:
         MQTT_URL: mqtt://emqx:1883 
