--- a/servicio-frontend.yml
+++ b/servicio-frontend.yml
@@ -3,6 +3,9 @@ version: '3.7'
 services:
     # front-end (usando svelte)
     frontend:
+      depends_on:
+      - emqx
+      - couchdb
       image: cbiale/huerta-iot:frontend-1.0
       ports: 
       - 5001:5001
