--- a/servicio-mqtt-replica.yml
+++ b/servicio-mqtt-replica.yml
@@ -7,8 +7,8 @@ services:
       EMQX_NODE__COOKIE: emqx-huerta-iot
       EMQX_DASHBOARD__DEFAULT_PASSWORD: 1978-huerta-iot
       EMQX_CLUSTER__DISCOVERY_STRATEGY: manual
-    # ports:
-    #   - 1883:1883
+    ports:
+       - 1883:1883
     #   - 8081:8081
     #   - 8083:8083
     #   - 8084:8084
