--- a/servicio-db.yml
+++ b/servicio-db.yml
@@ -1,18 +1,24 @@
-version: '3.7'
+version: '3.9'
 
 services:
     couchdb:
       image: apache/couchdb:3
+      hostname: couchdb.{{.Task.Slot}}.iot
       environment:
         COUCHDB_USER: "admin"
         COUCHDB_PASSWORD: -pbkdf2-ec6f84b04adce620e9d10512c8a5af9c4fe8379f,8a3bfe04b1f4294d89d9e9d250fce77a,10
         COUCHDB_SECRET: 46d689495ca02e8c35c3a3f683000ef1
-        NODENAME: "couchdb.0"
+        NODENAME: "couchdb.{{.Task.Slot}}.iot""
         ERL_FLAGS: "-setcookie a20b37d83ef18efce400b3ace400036e"
       volumes:
       - couchdb-data:/opt/couchdb/data
       ports:
       - 5984:5984
+      - 4369:4369
+      deploy:
+        replicas: 1
+        placement:
+          max_replicas_per_node: 1
       networks:
       - huerta_iot_net
 
@@ -22,7 +28,7 @@ networks:
 
 volumes:
   couchdb-data:
-    name: 'couchdb-0-vol'
+    name: 'couchdb-.{{.Task.Slot}}"-vol'
 
 # manejo del cluster
 # https://docs.couchdb.org/en/stable/cluster/nodes.html
