--- a/servicio-mqtt.yml
+++ b/servicio-mqtt.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: '3.9'
 
 services:
   emqx:
@@ -14,6 +14,10 @@ services:
       - 8084:8084
       - 8883:8883
       - 18083:18083
+      deploy:
+        replicas: 1
+        placement:
+          max_replicas_per_node: 1
     networks:
       - huerta_iot_net
 
